kubernetes/apps/home/emqx/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  hostnames: ["emqx.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-headless
          namespace: home
          port: 18083
      matches:
        - path:
            type: PathPrefix
            value: /
